# ros_follow_line

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docker/: Dockerfile  README.md  docker-compose.yaml  entrypoint.bash
hooks/: resource_paths.sh
launch/: docker_simple_circuit.launch  game_logic.launch.py  gazebo.launch.py  simple_circuit.launch
models/f1/: model.sdf
models/f1_aston_martin/: model.config  model.sdf
models/f1_aston_martin_cam/: model.config  model.sdf
models/f1_redbull/: model.config  model.sdf
models/f1_redbull_cam/: model.sdf
models/f1_renault/: model.sdf
models/f1_renault_cam/: model.config  model.sdf
models/f1_renault_dual_cam/: model.config  model.sdf
models/f1_renault_laser/: model.config  model.sdf
models/simple_circuit/: model.sdf
scripts/: game_logic_node.py
src/: color_filter.py  controller_pid.py  game_logic_node.py  utils.py
src/ros_follow_line/: color_filter.py  controller_pid.py  tools.py
worlds/: simple_circuit.world  simple_circuit_aston_martin.world  simple_circuit_redbull.world
