<?xml version="1.0"?>
<package format="3">
	<name>ros_follow_line</name>
	<version>1.4.2</version>
	<description>ROS follow line package</description>

	<maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>rospy</depend>
	<depend>nav_msgs</depend>
	<depend>std_srvs</depend>
	<depend>geometry_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>sensor_msgs</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>